--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/darrindevs/awesome-README-generator#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "inquirer": "^8.0.0"
   }
 }
